# csad2025KI-408DziurmanPavlo5

./: .gitignore  APKS_lab1_dziurman.sln  APKS_lab1_dziurman.vcxproj  APKS_lab1_dziurman.vcxproj.filters  CMakeLists.txt  README.md  baud_gen.vhd  ci.bat  ci.sh  i2c_master_tx.vhd  tb_i2c_master.vhd  uart_rx.vhd  uart_tb.vhd  uart_tx.vhd
.github/workflows/: ci.yml
tests/: unit_tests.cpp
